# nonebot2-cookbook

./: README.md  cookbook.md
docs/message/: send_message.md  send_message_in_schedule.md  send_picture.md
docs/test/: test_command.md
example/: README.md  bot.py  pyproject.toml
example/src/plugins/send_message/: __init__.py
example/src/plugins/send_message_in_schedule/: __init__.py
example/src/plugins/send_picture/: __init__.py
example/src/plugins/send_picture_ding/: __init__.py
example/tests/: conftest.py  utils.py
example/tests/message/: test_send_message.py
message/: send_message.md  send_message_in_schedule.md
