[tool.poetry]
name = "cookbook"
version = "0.2.0"
description = "cookbook"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-apscheduler = "^0.1.2"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = "^21.12b0"
isort = "^5.10.1"
nonebug = "^0.2.0"

[tool.nonebot]
plugins = []
plugin_dirs = ["src/plugins"]

[[tool.poetry.source]]
default = true
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
