[tool.poetry]
name = "cookbook"
version = "1.0.0"
description = "cookbook"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { extras = ["fastapi"], version = "^2.0.0" }
nonebot-adapter-onebot = "^2.2.3"
nonebot-plugin-apscheduler = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
nonebug = "^0.3.4"
pytest-asyncio = "^0.21.0"

[tool.nonebot]
plugins = []
plugin_dirs = ["src/plugins"]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
